// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Namespace Enterprise version Renders the component 1`] = `
<fragment-stub>
  <v-list-stub tag="div">
    <v-list-group-stub color="primary" activeclass="" appendicon="$expand" ripple="true">
      <v-icon-stub color="primary">
        mdi-chevron-down
      </v-icon-stub>
      <namespacelist-stub data-test="namespaceList-component"></namespacelist-stub>
      <v-list-item-stub activeclass="" tag="div">
        <namespaceadd-stub data-test="namespaceAdd-component"></namespaceadd-stub>
      </v-list-item-stub>
    </v-list-group-stub>
  </v-list-stub>
</fragment-stub>
`;

exports[`Namespace Open version Renders the component 1`] = `
<fragment-stub>
  <v-list-stub tag="div">
    <v-list-group-stub color="primary" activeclass="" appendicon="$expand" ripple="true">
      <v-icon-stub color="primary">
        mdi-chevron-down
      </v-icon-stub>
      <namespacelist-stub data-test="namespaceList-component"></namespacelist-stub>
      <!---->
    </v-list-group-stub>
  </v-list-stub>
</fragment-stub>
`;
